[tool.poetry]
name = "lyrix-exporter"
version = "0.1.0"
description = ""
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.11,>=3.6"
winrt = "^1.0.21033"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
